# SpecProp

./: .gitignore  pyproject.toml
examples/: example.ipynb
src/specprop/: __init__.py  spectrum.py
