[tool.poetry]
name = "specprop"
version = "0.1.0"
description = ""
authors = ["Ketan <ketansingharoy@gmail.com>"]
readme = "README.md"
packages = [{include = "specprop", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
