[tool.poetry]
name = "specprop"
version = "0.1.0"
description = ""
authors = ["Ketan <ketansingharoy@gmail.com>"]
readme = "README.md"
packages = [{include = "specprop", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
scipy = "^1.14.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
