[tool.poetry]
name = "specprop"
version = "0.1.0"
description = "A python package to compute and display spectral contents of signals."
authors = ["Ketan <ketansingharoy@gmail.com>"]
readme = "README.md"
packages = [{include = "specprop", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
scipy = "^1.14.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
